istio-rollout/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc1
spec:
  gateways:
    - rollouts-demo-gateway
  hosts:
    - rollouts-demo-vsvc1.local
  http:
    - name: primary
      route:
        - destination:
            host: rollouts-demo-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: rollouts-demo-canary
            port:
              number: 80
          weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc2
spec:
  gateways:
    - rollouts-demo-gateway
  hosts:
    - rollouts-demo-vsvc2.local
  http:
    - name: secondary
      route:
        - destination:
            host: rollouts-demo-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: rollouts-demo-canary
            port:
              number: 80
          weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-vs
spec:
  hosts:
    - "*"
  gateways:
    - rollouts-demo-gateway
  http:
    - match:
        - uri:
            prefix: ""
      route:
        - destination:
            host: rollouts-demo-stable
            port:
                number: 80
